# wiresync

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml
hack/: env.sh.temp
proto/: wiresync.proto
src/: client.rs  client_server.rs  db.rs  errors.rs  lib.rs  main.rs  server.rs
