[package]
name = "wiresync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive", "env"] }
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "offline"]}
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.8"